# backend-engineering-challenge

./: .gitignore
unbabel_cli/: README.md  pyproject.toml  tox.ini
unbabel_cli/examples/: events.json
unbabel_cli/tests/: test_cli.py  test_command.py
unbabel_cli/unbabel_cli/: cli.py  command.py
